# stock_indicator

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  indicator.py  justfile  pyproject.toml  requirements.txt  research_bsv_footprint_close.py  research_bsv_regime_change.py  research_ftd_bsv_breathing.py  research_ftd_bsv_relationship.py  run_daily_job.sh  run_place_tp_sl.sh  screen_manager.py  screener.py
Docs/: Usage.md
backup_setting/: sic_to_ff.csv
data/: .gitignore  adaptive_state.json  bsv_footprint_close_results.csv  bsv_regime_change_results.csv  ftd_bsv_breathing.csv  ftd_bsv_relationship.csv  multi_bucket_b1_raw.json  multi_bucket_b2_raw.json  multi_bucket_b3_raw.json  multi_bucket_b5_raw.json  multi_bucket_buy3+ftd.json  multi_bucket_buy3+ftd_tight.json  multi_bucket_buy3+near_close_locked.json  multi_bucket_buy3_adaptive.json  multi_bucket_buy3_adaptive_no_minhold.json  multi_bucket_buy3_locked.json  multi_bucket_buy3_production.json  multi_bucket_buy3_raw.json  multi_bucket_example.json  multi_bucket_ftd_raw.json  multi_bucket_near_close_raw.json  multi_bucket_s99.json  positions.json  sector_overrides.csv  sic_to_ff.csv  strategy_sets.csv  symbols.txt  symbols_daily_job.txt  symbols_with_sector.csv  symbols_with_sector.parquet  symbols_yf.txt
local_data/: current_status.json
log/: log_2023-05-19.txt  log_2023-05-20.txt  log_2023-05-23.txt  log_2023-05-24.txt  log_2023-05-25.txt  log_2023-05-27.txt  log_2023-05-29.txt  log_2023-06-08.txt  log_2023-06-09.txt  log_2023-06-10.txt  log_2023-06-12.txt  log_2023-06-13.txt  log_2023-06-14.txt  (+1 more)
(+19111 files in other folders)
